--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+.buttons i {
+  width : 80px;
+}
+
+.reply-button, .retweet-button,
+.like-button, .more-options-button {
+width : 80px;
+display : inline-block;
+}
+
+.like-count, .retweet-count {
+position : relative;
+bottom : 2px;
+font-size : 13px;
+margin-left : 6px;
+font-weight : bold;
+}
