--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,23 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.file-list {
+  font-family : Helvetica, sans-serif;
+  width : 100%;
+  max-width : 980px;
+  color : #333;
+  margin : 0 auto;
+  border : 1px solid #ccc;
+  border-collapse : collapse;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .file-list td {
+  border-top : 1px solid #ccc;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .file-name {
+  padding : 4px;
+  max-width : 180px;
   }
-}
-.buttons i {
-  width : 80px;
-}
-
-.reply-button, .retweet-button,
-.like-button, .more-options-button {
-width : 80px;
-display : inline-block;
-}
-
-.like-count, .retweet-count {
-position : relative;
-bottom : 2px;
-font-size : 13px;
-margin-left : 6px;
-font-weight : bold;
+#root{
+  background-color: rgb(119, 68, 7);
 }
