feat: fileName - File icon

--- a/src/tweet/index.css
+++ b/src/tweet/index.css
@@ -47,3 +47,11 @@
 .buttons i {
     width : 80px;
 }
+.file-icon {
+    width : 17px;
+    padding-left : 4px;
+    }
+    
+    .file-icon .fa-folder {
+    color : #508FCA;
+    }
